[project]
name = "checkmk_ansible_collection"
version = "7.4.0"
requires-python = ">=3.11"
dependencies = [
    "antsibull-changelog==0.35.0",
    "antsibull-docs==2.24.0",
    "ansible-lint==26.4.0",
    "jinja2==3.1.6",
    "molecule==26.4.0",
    "molecule-plugins[podman]==25.8.12",
    "pywinrm==0.5.0",
    "yamllint==1.38.0",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "click==8.3.2",
    "isort==8.0.1",
    "mypy-extensions==1.1.0",
    "pathspec==1.0.4",
    "platformdirs==4.9.6",
    "tomli==2.4.1",
    "typing-extensions==4.15.0",
]


[tool.isort]
profile = "black"
