[project]
name = "checkmk_ansible_collection"
version = "7.4.0"
requires-python = ">=3.11"
dependencies = [
    "antsibull-changelog==0.35.0",
    "antsibull-docs==2.24.0",
    "ansible-lint==26.4.0",
    "molecule==26.4.0",
    "molecule-plugins[podman]==25.8.12",
    "pywinrm==0.5.0",
    "yamllint==1.38.0",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "isort==8.0.1",
]


[tool.isort]
profile = "black"
